--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,5 @@ baseURL = "https://farseenabdulsalam.github.io/"
 languageCode = "en-us"
 title = "happycoder"
 theme = "happycoder-hugo-theme"
+[params]
+  github_url = "https://github.com/farseenabdulsalam/"
