--- a/config.toml
+++ b/config.toml
@@ -2,5 +2,6 @@ baseURL = "https://farseenabdulsalam.github.io/"
 languageCode = "en-us"
 title = "happycoder"
 theme = "happycoder-hugo-theme"
+publishDir = "docs"
 [params]
   github_url = "https://github.com/farseenabdulsalam/"
