--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/happycoder-hugo-theme"]
 	path = themes/happycoder-hugo-theme
 	url = https://github.com/farseenabdulsalam/happycoder-hugo-theme
+[submodule "docs"]
+	path = docs
+	url = git@github.com:farseenabdulsalam/farseenabdulsalam.github.io.git
